# prometheus-mcp-server

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml
deploy/helm/prometheus-mcp-server/: Chart.yaml  values.yaml
deploy/helm/prometheus-mcp-server/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  pdb.yaml  secret.yaml  service.yaml  serviceaccount.yaml
deploy/kubernetes/: configmap.yaml  deployment.yaml  hpa.yaml  kustomization.yaml  rbac.yaml  secret.yaml  service.yaml
src/prometheus_mcp_server/: __init__.py  cli.py  client.py  config.py  exceptions.py  server.py
tests/: __init__.py  conftest.py  test_client.py  test_config.py  test_server.py
