[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prometheus-mcp-server"
version = "2.0.0"
description = "A production-grade Model Context Protocol (MCP) server for Prometheus with 38 tools for AI agents - query metrics, analyze alerts, SRE golden signals, anomaly detection, and more."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "punkpeye" }
]
maintainers = [
    { name = "punkpeye" }
]
keywords = [
    "mcp",
    "model-context-protocol",
    "prometheus",
    "monitoring",
    "observability",
    "sre",
    "ai",
    "llm",
    "metrics",
    "alerting"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "tenacity>=8.2.0",
    "structlog>=24.0.0",
    "uvicorn>=0.30.0",
    "starlette>=0.37.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-httpx>=0.30.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
    "black>=24.0.0",
    "pre-commit>=3.6.0",
    "respx>=0.21.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/punkpeye/prometheus-mcp-server"
Documentation = "https://github.com/punkpeye/prometheus-mcp-server#readme"
Repository = "https://github.com/punkpeye/prometheus-mcp-server.git"
Issues = "https://github.com/punkpeye/prometheus-mcp-server/issues"
Changelog = "https://github.com/punkpeye/prometheus-mcp-server/blob/main/CHANGELOG.md"

[project.scripts]
prometheus-mcp-server = "prometheus_mcp_server.cli:main"

[project.entry-points."mcp.servers"]
prometheus = "prometheus_mcp_server.server:create_server"

[tool.hatch.build.targets.wheel]
packages = ["src/prometheus_mcp_server"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B009",   # do not call getattr with a constant attribute value
]

[tool.ruff.lint.isort]
known-first-party = ["prometheus_mcp_server"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = ["mcp.*", "uvicorn.*", "starlette.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "-ra",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests requiring Prometheus",
    "slow: Slow running tests",
]

[tool.coverage.run]
source = ["src/prometheus_mcp_server"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 80
show_missing = true
